Fixed delete not showing problem.

--- a/front/app/styles/pixcrawl.css
+++ b/front/app/styles/pixcrawl.css
@@ -393,7 +393,7 @@
 }
 
 .pixcrawl .search li {
-    display: none;
+    /* display: none; */
     animation: search-item-show 0.5s ease-out forwards;
     padding: 10px 0;
     flex-direction: row;
